tests/negative/memory_bool1.C
bool src(bool a)
{
  volatile bool t;
  t = a;
  return t;
}

bool tgt(bool a)
{
  return !a;
}
